--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Codec Cold Trial';
+  src: url('../public/fonts/codec-cold-cufonfonts/Codec-Cold-Regular-trial.ttf') format('woff2');
+  /* Add other font properties if needed */
+}
+
+@font-face {
+  font-family: 'codec pro bold';
+  src: url('../public/fonts/codec-cold-cufonfonts/codec-pro-bold.ttf') format('woff2');
+  /* Add other font properties if needed */
+}
+
+@font-face {
+  font-family: 'Codec pro regular';
+  src: url('../public/fonts/codec-cold-cufonfonts/codec-pro-regular.ttf') format('woff2');
+  /* Add other font properties if needed */
+}
+
 body::-webkit-scrollbar {
   width: 10px; /* width of the entire scrollbar */
 }
@@ -21,7 +39,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: Gilroy-Regular;
+  color: #ffffff;
+  font-family: "Codec pro regular", "Gilroy-Regular";
   scrollbar-width: none; /* For Firefox */
   -ms-overflow-style: none; /* For Internet Explorer and Edge */
 }
@@ -35,16 +54,27 @@ body::-webkit-scrollbar {
 }
 
 .menu {
-  left: 20vw;
-  right: 20vw;
-  background: #404040;
-  fill: black;
-  border-radius: 50px;
-  height: 5rem;
-  /* font-family: "Codec Cold Trial"; */
+  background: rgb(64 64 64 / 70%);
+  border-radius: 28px;
   font-size: 24px;
   font-style: normal;
-  font-weight: 700;
+  /* font-weight: 700; */
+  padding: 23px 50px 23px 50px;
+}
+
+.gradient-font {
+
+  background: linear-gradient(90deg, #305FFF 0%, #BB03FF 74.5%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+.normal-font {
+  font-style: normal;
+  /* font-weight: 700; */
+  font-size: 44px;
 }
 
 .hazmat-label {
@@ -52,35 +82,32 @@ body::-webkit-scrollbar {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "Codec Cold Trial";
+  /* font-family: "Codec Cold Trial"; */
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 44px;
 }
 
 .label-codec {
-  color: #FFF;
-  /* font-family: "Codec Cold Trial"; */
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
+    line-height:60px;
+    font-size: 60px;
 }
 
 .title {
   color: #FFF;
-  /* font-family: "Codec Cold Trial"; */
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
+  font-family: "codec pro bold";
+  font-size: 40px;
+  /* font-style: normal; */
+  /* font-weight: 700; */
 }
 
 .content {
-  @apply title;
   font-size: 20px;
 }
 
 .stake-hoder-image {
-  width: 20%;
+  /* width: 20%; */
+  height: 90vh
 }
 
 .crop-container {
@@ -88,12 +115,28 @@ body::-webkit-scrollbar {
   height: auto; /* adjust as needed */
   overflow: hidden; /* hides the overflowing part of the image */
   position: relative; /* ensures the child image is positioned relative to this container */
+  margin: -2.5rem;
 }
 
 .carrie-header {
   flex-direction: column;
   width: 250px;
   margin-left: 0px;
+}
+
+.header-logo {
+  width: 120px;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+
+.side-float {
+  width: 25px;
+  position: fixed;
+  z-index: 1;
+  top: 60vh;
+  padding-left: 10px;
 }
 
 /* @media (min-width: 1140px) {
@@ -132,9 +175,17 @@ body::-webkit-scrollbar {
 
 @media (min-width: 768px) {
   .about-us-header {
-    margin-left:  12%;
+    /* margin-left:  5%; */
   }
 }
+
+.about-us-header-container  .stock-images {
+  width: 80%;
+}
+.about-us-header-container {
+  background-size: 100% 100%;
+}
+
 
 @media (max-width: 640px) {
 
@@ -149,6 +200,7 @@ body::-webkit-scrollbar {
 
   .title {
     font-size: 16px;
+    /* font-family: "codec pro bold"; */
   }
 
   .content {
@@ -167,7 +219,6 @@ body::-webkit-scrollbar {
   border-top-left-radius: 15%;
   border-top-right-radius: 15%;
 }
-
 
 
 
