--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,10 @@ body::-webkit-scrollbar {
   bottom: calc(5vh + 1rem); /* Considering the default font-size in Tailwind is 16px */
 }
 
+.bottom-space {
+  bottom: calc(1vh + 1rem); /* Considering the default font-size in Tailwind is 16px */
+}
+
 .menu {
   background: rgb(64 64 64 / 70%);
   border-radius: 28px;
@@ -110,6 +114,11 @@ body::-webkit-scrollbar {
   height: 90vh
 }
 
+.stake-hoder-image-tech {
+  /* width: 20%; */
+  /* height: 90vh */
+}
+
 .crop-container {
   width: 75%; /* desired width after cropping */
   height: auto; /* adjust as needed */
@@ -120,8 +129,34 @@ body::-webkit-scrollbar {
 
 .carrie-header {
   flex-direction: column;
-  width: 250px;
+  /* width: 250px; */
   margin-left: 0px;
+}
+
+.carrie-header-text {
+  flex-direction: column;
+  /* width: 250px; */
+  margin-left: 0px;
+  width: 85%;
+  text-align: right;
+}
+
+.carrie-bg {
+  background-size: 75% 100%;
+  background-position: right;
+  width: 100%;
+}
+
+.shipper-bg {
+  background-size: 67% 100%;
+  background-position: left;
+  width: 100%;
+}
+
+.esang {
+  background-size: cover;
+  background-position-y: 30%;
+  width: 100%;
 }
 
 .header-logo {
@@ -190,16 +225,54 @@ body::-webkit-scrollbar {
 @media (max-width: 640px) {
 
   .about-us-header-container {
-    justify-content:  center;
+    justify-content: center;
+    text-align: center;
+    background-size: cover;
+    margin-top: 20%;
+    height: 85vh;
+  }
+
+  .carrie-bg {
+    background-size: cover;
+    height: 70vh;
+    background-position: 0%;
+    width: 100%;
+    margin-top: 20%;
+    padding: 0 2.5rem;
+  }
+ 
+  .esang {
+    background-size: cover;
+    background-position-x: 40%;
+    height: 70vh;
+    margin-top: 25%;
+    padding: 0 2.5rem;
   }
 
   .about-us-header
   {
-    margin-top: 10%;
+    padding: 0;
+    margin-top: 0;
+  }
+
+  .label-codec {
+    font-size: 32px;
+    line-height: 44px;
+  }
+
+  .hazmat-label {
+    font-size: 30px;
+    line-height: 44px;
+  }
+
+  .executiveSumary {
+    text-align: center;
   }
 
   .title {
-    font-size: 16px;
+    font-size: 25px;
+    text-align: center;
+    /* font-size: 16px; */
     /* font-family: "codec pro bold"; */
   }
 
@@ -219,9 +292,6 @@ body::-webkit-scrollbar {
   border-top-left-radius: 15%;
   border-top-right-radius: 15%;
 }
-
-
-
 
 
 
