--- a/src/index.css
+++ b/src/index.css
@@ -21,40 +21,51 @@
 }
 
 body::-webkit-scrollbar {
-  width: 10px; /* width of the entire scrollbar */
+  width: 10px;
+  /* width of the entire scrollbar */
 }
 
 body::-webkit-scrollbar-track {
-  background: #351e5f; /* color of the tracking area */
+  background: #351e5f;
+  /* color of the tracking area */
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #4e0097; /* color of the scroll thumb */
-  border-radius: 5px; /* roundness of the scroll thumb */
-  border: 0.1px solid #4e0097; /* creates padding around scroll thumb */
+  background-color: #4e0097;
+  /* color of the scroll thumb */
+  border-radius: 5px;
+  /* roundness of the scroll thumb */
+  border: 0.1px solid #4e0097;
+  /* creates padding around scroll thumb */
 }
-.react-pdf__Page__textContent  {
- background: transparent !important;
- display: none !important;
+
+.react-pdf__Page__textContent {
+  background: transparent !important;
+  display: none !important;
 }
 
 body {
   color: #ffffff;
   font-family: "Codec pro regular", "Gilroy-Regular";
-  scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+  scrollbar-width: none;
+  /* For Firefox */
+  -ms-overflow-style: none;
+  /* For Internet Explorer and Edge */
 }
 
 body::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
+  display: none;
+  /* For Chrome, Safari, and Opera */
 }
 
 .bottom-5vh {
-  bottom: calc(5vh + 1rem); /* Considering the default font-size in Tailwind is 16px */
+  bottom: calc(5vh + 1rem);
+  /* Considering the default font-size in Tailwind is 16px */
 }
 
 .bottom-space {
-  bottom: calc(1vh + 1rem); /* Considering the default font-size in Tailwind is 16px */
+  bottom: calc(1vh + 1rem);
+  /* Considering the default font-size in Tailwind is 16px */
 }
 
 .menu {
@@ -63,7 +74,7 @@ body::-webkit-scrollbar {
   font-size: 24px;
   font-style: normal;
   /* font-weight: 700; */
-  padding: 23px 50px 23px 50px;
+  /* padding: 23px 50px 23px 50px; */
 }
 
 .gradient-font {
@@ -89,36 +100,75 @@ body::-webkit-scrollbar {
   /* font-family: "Codec Cold Trial"; */
   font-style: normal;
   font-weight: 700;
-  font-size: 44px;
+  font-size: 64px;
 }
 
 .label-codec {
-    line-height:60px;
-    font-size: 60px;
+  line-height: 80px;
+  font-size: 64px;
 }
 
 .title {
   color: #FFF;
   font-family: "codec pro bold";
-  /* font-size: 40px; */
-  font-size: 50px;
+  /* font-size: 50px; */
+  font-size: 64px;
+  line-height: 80px;
   /* font-style: normal; */
   /* font-weight: 700; */
 }
 
+.subtitle-font {
+  font-size: 32px;
+}
+
 .subtitle {
   /* font-size: 25px; */
-  font-size: 22px;
+  font-size: 32px;
   color: rgba(255, 255, 255, 0.60);
 }
 
+.content-color {
+  /* font-size: 25px; */
+  font-size: 24px;
+  line-height: 35px;
+  color: rgba(255, 255, 255, 0.60);
+  padding-top: 10px;
+}
+
+.intro-bg {
+  /* height: 80vh; */
+  background-size: cover;
+  padding-left: 2rem;
+  margin-top: -5%;
+}
+
+.stake-hoder-image-bg {
+  /* background-size: 100% 90% !important; */
+  background-size: cover !important;
+  height: 200vh;
+  margin-top: -5%;
+  /* padding-top: 0; */
+}
+
+.carrie-title-font {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 50px;
+}
+
 .content {
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33px;
 }
 
 .stake-hoder-image {
   /* width: 20%; */
-  height: 90vh
+  /* height: 90vh */
+  height: 100vh
 }
 
 .stake-hoder-image-tech {
@@ -128,9 +178,12 @@ body::-webkit-scrollbar {
 
 .crop-container {
   /* width: 75%;  */
-  height: auto; /* adjust as needed */
-  overflow: hidden; /* hides the overflowing part of the image */
-  position: relative; /* ensures the child image is positioned relative to this container */
+  height: auto;
+  /* adjust as needed */
+  overflow: hidden;
+  /* hides the overflowing part of the image */
+  position: relative;
+  /* ensures the child image is positioned relative to this container */
   margin: -2.5rem;
 }
 
@@ -172,7 +225,12 @@ body::-webkit-scrollbar {
   width: 100%;
 }
 
-
+.shipper-txt {
+  font-size: 128px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 126px
+}
 
 .header-logo {
   width: 120px;
@@ -229,9 +287,10 @@ body::-webkit-scrollbar {
   }
 }
 
-.about-us-header-container  .stock-images {
+.about-us-header-container .stock-images {
   width: 80%;
 }
+
 .about-us-header-container {
   background-size: 100% 100%;
 }
@@ -243,8 +302,21 @@ body::-webkit-scrollbar {
     justify-content: center;
     text-align: center;
     background-size: cover;
-    margin-top: 20%;
+    padding-top: 20%;
     height: 85vh;
+    background-position-x: 55%;
+    padding: 0;
+  }
+
+  .intro-bg {
+    margin-top: 0;
+    padding: 0;
+  }
+
+  .subtitle-font {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 200;
   }
 
   .carrie-bg {
@@ -252,35 +324,44 @@ body::-webkit-scrollbar {
     height: 70vh;
     background-position: 0%;
     width: 100%;
-    margin-top: 20%;
-    padding: 0 2.5rem;
+    padding-top: 20%;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
- 
+
   .esang {
     background-size: cover;
     background-position-x: 40%;
     height: 70vh;
-    margin-top: 25%;
-    padding: 0 2.5rem;
+    padding-top: 25%;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
+
   .bo-img {
     height: 40vh !important;
   }
-  
+
   .shipper-bg {
     background-size: 100% 90vh;
     background-position-y: top;
   }
-  
-  .about-us-header
-  {
+
+  .about-us-header {
     padding: 0;
     margin-top: 0;
   }
 
   .label-codec {
-    font-size: 32px;
-    line-height: 44px;
+    font-size: 30px;
+    line-height: 40px;
+    /* font-size: 32px;
+    line-height: 44px; */
+  }
+
+  .shipper-txt {
+    font-size: 64px;
+    line-height: 80px
   }
 
   .hazmat-label {
@@ -293,15 +374,55 @@ body::-webkit-scrollbar {
   }
 
   .title {
-    font-size: 25px;
+    font-size: 30px;
+    line-height: 40px;
     text-align: center;
     /* font-size: 16px; */
     /* font-family: "codec pro bold"; */
   }
 
+  .content-color {
+    font-size: 14px;
+    line-height: 25px;
+  }
+
   .content {
     font-size: 14px;
+    line-height: 25px;
   }
+
+  .carrie-title-font{
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 30px;
+  }
+  .subtitle {
+    font-size: 14px;
+    line-height: 25px;
+  }
+
+  .w-20{
+    width: 3rem;
+  }
+  .h-20{
+    height: 3rem;
+  }
+
+  .mob-nav{
+    position: fixed;
+    width: 100%;
+    z-index: 99;
+    /* background: #00000094; */
+    background: #000000;
+    padding: 12px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.links-list li {
+  padding: 0 30px;
 }
 
 .gradient-fill {
@@ -316,13 +437,25 @@ body::-webkit-scrollbar {
   border-top-right-radius: 15%;
 }
 
-
-
-
-
-
-
-
-
-
-
+/* CSS for scrollbar */
+   /* width */
+   ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #FFFFFF; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #315EFF 19.32%, #BA03FF 100%);
+    border-radius: 25px;
+    height: 60px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #315EFF; 
+  }
