--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,17 @@ body::-webkit-scrollbar {
 }
 
 .gradient-font {
-
+  /* background: linear-gradient(180deg, #305FFF 0%, #BB03FF 74.5%); */
   background: linear-gradient(90deg, #305FFF 0%, #BB03FF 74.5%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+.gradient-font-sub {
+  background: linear-gradient(180deg, #305FFF 0%, #BB03FF 74.5%);
+  /* background: linear-gradient(90deg, #305FFF 0%, #BB03FF 74.5%); */
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -108,6 +117,7 @@ body::-webkit-scrollbar {
   /* font-size: 50px; */
   font-size: 64px;
   line-height: 80px;
+  text-transform: capitalize;
   /* font-style: normal; */
   /* font-weight: 700; */
 }
@@ -332,9 +342,9 @@ body::-webkit-scrollbar {
     background-size: cover;
     background-position-x: 40%;
     height: 80vh;
-    margin-top: 15%;
+    margin-top: 25%;
     padding-left: 1.5rem;
-    padding-top: 1rem;
+    /* padding-top: 1rem; */
   }
 
   .bo-img {
@@ -432,6 +442,7 @@ body::-webkit-scrollbar {
 }
 
 .gradient-fill {
+  /* background: linear-gradient(180deg, #305FFF 0%, #BB03FF 74.5%); */
   background: linear-gradient(90deg, #315EFF 19.32%, #BA03FF 100%);
   background-clip: text;
   -webkit-background-clip: text;
